--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "fundebug-javascript": "^2.5.0",
+        "fundebug-vue": "0.0.1",
+        "vant": "^2.12.23",
         "vue": "^2.6.11",
         "vue-i18n": "^8.24.5"
     },
@@ -21,7 +24,7 @@
         "babel-eslint": "^10.1.0",
         "babel-plugin-component": "^1.1.1",
         "babel-preset-es2015": "^6.24.1",
-        "element-ui": "^2.15.1",
+        "element-ui": "^2.15.3",
         "eslint": "^6.7.2",
         "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-vue": "^6.2.2",
