--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "fundebug-vue": "0.0.1",
         "vant": "^2.12.23",
         "vue": "^2.6.11",
-        "vue-i18n": "^8.24.5"
+        "vue-i18n": "^8.24.5",
+        "vue-lazyload": "^1.3.3"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "~4.5.0",
